<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddHostel"
    tools:showIn="@layout/app_bar_add_hostel"
    android:background="#cbf7e9">

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="8dp"
            android:text="@string/title_map_add_hostel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:id="@+id/mapAdd"
            android:name="com.google.android.gms.maps.SupportMapFragment" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="8dp"
            android:text="@string/thongtin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_add_border">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/giaphong" />

            <EditText
                android:hint="@string/hint_giaphong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:background="@drawable/custom_edittext"
                android:layout_weight=".75" />
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/custom_border_bottom_row"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/dientich" />

            <EditText
                android:hint="@string/hint_dientich"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:background="@drawable/custom_edittext"
                android:layout_weight=".75" />
        </LinearLayout>
        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:weightSum="1" >

            <TextView
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:text="@string/dienthoai" />

            <EditText
                android:hint="@string/hint_dienthoai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:background="@drawable/custom_edittext"
                android:layout_weight=".75" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>